# CovidBracelet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  basestation.py  build_native.sh  extra_script.py  for_future_use.txt  platformio.ini  prj.conf  uuid_definitions.json
.github/workflows/: build.yaml  main.yaml  test.yaml
boards/: pinetime_devkit0.json
boot/: nrf52840_dk.hex
include/: bloom.h  covid.h  display.h  export.pb-c.h  extract_keys.h  gatt_service.h  record_storage.h  sync_service.h  tek_storage.h  tracing.h  util.h
include/ens/: storage.h
include/tls_config/: user-tls.conf
include/utility/: ens_fs.h  util.h
lib/exposure-notification/: library.json
lib/u8g2/: library.json
scripts/: eval.py  eval_utility.py
src/: battery.c  battery.h  bloom.c  bloom.h  contacts.c  contacts.h  covid.c  covid.h  covid_types.h  device_information_service.c  display.c  display.h  display_pinetime.c  display_pinetime.h  export.pb-c.c  exposure-notification.c  extract_keys.c  extract_keys.h  gatt-service.c  io.c  io.h  main.c  main_test.c  record_storage.c  records.c  sequencenumber.c  sequencenumber.h  storage.c  storage.h  sync_service.c  tek_storage.c  tracing.c  util.c  wens_definitions.h
src/ens/: ens_error.h  ens_fs.c  ens_fs.h  records.c  records.h  sequencenumber.c  sequencenumber.h  (+2 more)
zephyr/: CMakeLists.txt  Kconfig  build_native.sh  native_posix_64.overlay  nrf52840_mdk.overlay  nrf52840dk_nrf52840.overlay  pinetime_devkit0.overlay  prj.conf
zephyr/boards/: native_posix_64.conf
zephyr/dts/bindings/power/: simple-battery.yaml
(+7 files in other folders)
